--- a/ToeplitzMatrixMultiplication/ToeplitzMatrixMultiplication/packages.config
+++ b/ToeplitzMatrixMultiplication/ToeplitzMatrixMultiplication/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DSPLibrary" version="1.0.0" targetFramework="net472" />
   <package id="MathNet.Numerics" version="4.15.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="3.5.8" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
 </packages>
