--- a/ToeplitzMatrixMultiplication/ToeplitzMatrixMultiplication/ToeplitzMatrixMultiplication.csproj
+++ b/ToeplitzMatrixMultiplication/ToeplitzMatrixMultiplication/ToeplitzMatrixMultiplication.csproj
@@ -86,6 +86,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GenerateFile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerateFile.Designer.cs">
+      <DependentUpon>GenerateFile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Random Computation Test.cs">
@@ -97,6 +103,9 @@
     <Compile Include="ToeplitzMultiplication.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GenerateFile.resx">
+      <DependentUpon>GenerateFile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
